Acknowledge ARC (Flux)

--- a/mc3.tex
+++ b/mc3.tex
@@ -85,6 +85,9 @@ The discussion will go here.
 
 \section*{Acknowledgements}
 
-The acknowledgements will go here.
+This research was supported in part through computational resources
+and services provided by Advanced Research Computing
+at the University of Michigan, Ann Arbor.
+
 
 \end{document}
