Outline some general topics to write

--- a/mc3.tex
+++ b/mc3.tex
@@ -58,13 +58,20 @@ The abstract will go here.
 % State the reason for the work, the context and the hypotheses being tested
 \section*{Introduction}
 
-The introduction will go here.
+The introduction will go here, including discussion of BAMM.
 
 
 % Include sufficient details for the work to be repeated
 \section*{Materials and methods}
 
-The methods will go here.
+\subsection*{Metropolis coupled MCMC}
+
+Describe implementation of MC$^{3}$.
+
+
+\subsection*{Performance analysis}
+
+Describe how performance was analyzed for simulated and emprical trees.
 
 
 % State the results, drawing attention to important details
