--- a/mc3.tex
+++ b/mc3.tex
@@ -138,4 +138,6 @@ and services provided by Advanced Research Computing
 at the University of Michigan, Ann Arbor.
 
 
+\bibliography{mc3}
+
 \end{document}
