Fix bibliography typo

--- a/mc3.bib
+++ b/mc3.bib
@@ -1,6 +1,6 @@
 @article{alt04,
     author = {Altekar, G. and Dwarkadas, S. and Huelsenbeck, J. P.
-        and Ronquist F.}, year = {2004},
+        and Ronquist, F.}, year = {2004},
     title = {Parallel \uppercase{M}etropolis coupled
         \uppercase{M}arkov chain \uppercase{M}onte \uppercase{C}arlo
         for \uppercase{B}ayesian phylogenetic inference},
