Re-format Abstract numbering

--- a/mc3.tex
+++ b/mc3.tex
@@ -52,7 +52,8 @@ $^{*}$Corresponding author: Daniel L. Rabosky (drabosky@umich.edu)
 % Maximum of 350 words
 \section*{Abstract}
 
-\begin{flushleft}
+% Suppress indentation for the following paragraphs
+{\setlength{\parindent}{0cm}
 
 \textbf{1.}
 BAMM (Bayesian Analysis of Macroevolutionary Mixtures) is a computer program
@@ -89,8 +90,7 @@ Greater than four chains results in diminishing returns.
 \textbf{4.}
 \MCMCMC\ greatly improves the reliability of results in BAMM,
 and we recommend its use in all future studies of macroevolutionary dynamics.
-
-\end{flushleft}
+}
 
 \begin{flushleft}
 \textbf{Key-words:} BAMM, Bayesian, macroevolution, phylogeny, skink, speciation
