Add draft of performance analysis section

--- a/mc3.bib
+++ b/mc3.bib
@@ -6,3 +6,18 @@
         for \uppercase{B}ayesian phylogenetic inference},
     journal = {Bioinformatics}, volume = {20}, pages = {407-415}
 }
+
+@article{rab14plos,
+    author = {Rabosky, D. L.}, year = {2014},
+    title = {Automatic detection of key innovations, rate shifts,
+        and diversity-dependence on phylogenetic trees},
+    journal = {PLoS ONE}, volume = {9}, pages = {e89543}
+}
+
+@article{rab14sysbio,
+    author = {Rabosky, D. L. and Donnellan, S. C. and Grundler, M.
+        and Lovette, I. J.}, year = {2014},
+    title = {Analysis and visualization of complex macroevolutionary dynamics:
+        an example from \uppercase{A}ustralian scincid lizards},
+    journal = {Systematic Biology}, volume = {63}, pages = {610-627}
+}
