Add that simulated trees were run with 8 chains

--- a/mc3.tex
+++ b/mc3.tex
@@ -316,7 +316,7 @@ to diversity-dependent speciation-extinction processes.
 We used BAMM (version 2.0.1) to model rates of species diversification
 across each tree with and without \MCMCMC.
 %
-Runs with \MCMCMC\ were configured with four chains,
+Runs with \MCMCMC\ were configured with four and eight chains,
 the temperature increment parameter $\Delta T$ was set to 0.1,
 and the swap period was set to 1,000 generations.
 %
