--- a/mc3.tex
+++ b/mc3.tex
@@ -110,35 +110,37 @@ and we recommend its use in all future studies of macroevolutionary dynamics.
 \subsection*{Background}
 
 The variation in species richness and phenotypic diversity
-we see today among groups of organisms is partly due
-to the evolutionary processes of speciation and extinction.
+we see today across groups of organisms is partly due
+to the stochastic evolutionary processes of speciation and extinction.
 %
 Rates of speciation and extinction differ among groups
-and have changed through time as a result of historical events,
+and have changed through time as a result of unique historical events,
 such as environmental, phenotypic, and genetic changes.
 %
 For example, speciation could dramatically increase
-during an adaptive radiation on a newly colonized island.
+during an adaptive radiation of a species on a newly colonized island.
 %
 The phenotypic diversity of this colonizing group
-could also increase as organisms evolve as they fill
+would also increase as organisms adapt and fill
 the available ecological niches.
 
 
-The processes of speciation and extinction with a group of organisms
+The processes of speciation and extinction within a group of organisms
 have shaped the topology of their phylogenetic tree.
 %
 Phylogenetic trees can therefore be used to extract
 information about the evolutionary processes that shaped them.
 %
-For example, an adaptive radiation could show up
+For example, an adaptive radiation would show up
 as a burst in the number of splits and branches on a tree.
 %
-A phylogenetic tree would likely be composed of several processes,
-each affecting the rate of diversification or morphological evolution
+Reflecting the complex dynamics of diversification,
+a phylogenetic tree would likely be composed of several processes.
+%
+Each process would affect the rate of diversification or morphological evolution
 at a rate different from another such process.
 %
-A new method was developed recently to identify and characterize
+A new method was recently developed to identify and characterize
 such macroevolutionary processes across phylogenetic trees \citep{rab14plos}.
 
 
