Revise and expand MC4 section of Introduction

--- a/mc3.bib
+++ b/mc3.bib
@@ -7,6 +7,13 @@
     journal = {Bioinformatics}, volume = {20}, pages = {407-415}
 }
 
+@book{giv05,
+    author = {Givens, G. H. and Hoeting, J. A.}, year = {2005},
+    title = {Computational Statistics},
+    publisher = {John Wiley \& Sons, Inc.},
+    address = {Hoboken, NJ}
+}
+
 @article{rab14plos,
     author = {Rabosky, D. L.}, year = {2014},
     title = {Automatic detection of key innovations, rate shifts,
