Update main title

--- a/mc3.tex
+++ b/mc3.tex
@@ -30,7 +30,7 @@
 
 \begin{flushleft}
 
-{\Large\textbf{Metropolis coupled Markov chain Monte Carlo
+{\Large\textbf{Multi-core Metropolis coupled Markov chain Monte Carlo
     for detecting rate shifts on phylogenetic trees}}
 
 % Short title must be <= 45 characters (current: 47, including spaces)
